opam-version: "2.0"
maintainer: "Carine Morel <carine@tarides.com>"
authors: [ "Carine Morel <carine@tarides.com>" ]
license: "ISC"
homepage: "https://github.com/lyrm/ocaml-httpadapter"
dev-repo: "git+https://github.com/lyrm/ocaml-httpadapter.git"
bug-reports: "https://github.com/lyrm/ocaml-httpadapter/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.07.1"}
  "dune" {>= "2.0"}
  "cohttp" {>= "2.4.0"}
  "httpaf" {>= "0.6.5"}
  "uri" {>= "3.1.0"}
]
synopsis: "todo"
description: """
todo.
"""
